// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UrlSlugField > when there is a custom slug > matches the snapshot 1`] = `
<div>
  <div
    class="rounded-lg border p-3 shadow-xs"
  >
    <div
      class="space-y-1"
    >
      <div
        class="flex flex-row items-start justify-between"
      >
        <div
          class="space-y-0.5 m-0"
        >
          <div
            class="flex gap-1 items-center"
          >
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              for=":id1:-form-item"
            >
              Custom URL Slug
            </label>
            <svg
              aria-controls="radix-:id2:"
              aria-expanded="false"
              aria-haspopup="dialog"
              class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
              data-slot="dialog-trigger"
              data-state="closed"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              type="button"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
          <p
            class="text-sm text-muted-foreground"
            id=":id1:-form-item-description"
          >
            Set a custom, memorable URL for your sweepstakes
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby=":id1:-form-item-description"
          aria-invalid="false"
          class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.3rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="switch"
          data-state="checked"
          id=":id1:-form-item"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-4 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
            data-slot="switch-thumb"
            data-state="checked"
          />
        </button>
      </div>
    </div>
    <div
      data-state="open"
    >
      <div
        class="flex flex-col gap-1"
        data-state="open"
        id="radix-:id3:"
        style="transition-duration: 0s; animation-name: none;"
      >
        <div
          class="space-y-1"
        >
          <input
            aria-describedby=":id4:-form-item-description"
            aria-invalid="false"
            class="file:text-foreground placeholder:text-muted-foreground bg-white selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive mt-3"
            data-slot="input"
            id=":id4:-form-item"
            name="visibility.slug"
            value="summer-fun"
          />
          <p
            class="text-sm text-muted-foreground"
            id=":id4:-form-item-description"
          >
            Only letters, numbers, and hyphens. Must be unique across all giveaways.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UrlSlugField > when there is no custom slug > matches the snapshot 1`] = `
<div>
  <div
    class="rounded-lg border p-3 shadow-xs"
  >
    <div
      class="space-y-1"
    >
      <div
        class="flex flex-row items-start justify-between"
      >
        <div
          class="space-y-0.5 m-0"
        >
          <div
            class="flex gap-1 items-center"
          >
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
              for=":id1:-form-item"
            >
              Custom URL Slug
            </label>
            <svg
              aria-controls="radix-:id2:"
              aria-expanded="false"
              aria-haspopup="dialog"
              class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
              data-slot="dialog-trigger"
              data-state="closed"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              type="button"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
          <p
            class="text-sm text-muted-foreground"
            id=":id1:-form-item-description"
          >
            Set a custom, memorable URL for your sweepstakes
          </p>
        </div>
        <button
          aria-checked="false"
          aria-describedby=":id1:-form-item-description"
          aria-invalid="false"
          class="peer data-[state=checked]:bg-primary data-[state=unchecked]:bg-input focus-visible:border-ring focus-visible:ring-ring/50 dark:data-[state=unchecked]:bg-input/80 inline-flex h-[1.3rem] w-8 shrink-0 items-center rounded-full border border-transparent shadow-xs transition-all outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50"
          data-slot="switch"
          data-state="unchecked"
          id=":id1:-form-item"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="bg-background dark:data-[state=unchecked]:bg-foreground dark:data-[state=checked]:bg-primary-foreground pointer-events-none block size-4 rounded-full ring-0 transition-transform data-[state=checked]:translate-x-[calc(100%-2px)] data-[state=unchecked]:translate-x-0"
            data-slot="switch-thumb"
            data-state="unchecked"
          />
        </button>
      </div>
    </div>
    <div
      data-state="closed"
    >
      <div
        class="flex flex-col gap-1"
        data-state="closed"
        hidden=""
        id="radix-:id3:"
        style=""
      />
    </div>
  </div>
</div>
`;

exports[`VisibilityTypeField > matches the snapshot 1`] = `
<div>
  <div
    class="space-y-1"
  >
    <div
      class="flex items-end gap-1"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for=":id1:-form-item"
      >
        Visibility Type
      </label>
      <svg
        aria-controls="radix-:id2:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="lucide lucide-circle-question-mark h-4 w-4 text-primary-foreground bg-primary rounded-full cursor-help"
        data-slot="dialog-trigger"
        data-state="closed"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        type="button"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </div>
    <button
      aria-autocomplete="none"
      aria-controls="radix-:id3:"
      aria-expanded="false"
      class="flex h-9 shadow-xs w-full items-center justify-between rounded-md border border-input bg-white dark:bg-input/30 px-3 py-2 text-sm ring-offset-background data-placeholder:text-muted-foreground focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1"
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Unlisted
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down h-4 w-4 opacity-50"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
